objects/Static_Code_Analysis_Result__c.object
<CustomObject>
    <description>This object stores the results of Static Code Analysis executed through Copado.</description>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Violations__c</fullName>
        <description>Overall number of rule violations.</description>
        <label>Number of Violations</label>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_v11__c</fullName>
        <description>New v11 version of the Score field.</description>
        <label>Score</label>
        <summarizedField>Static_Code_Analysis_Violation__c.Score__c</summarizedField>
        <summaryForeignKey>Static_Code_Analysis_Violation__c.Static_Code_Analysis_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Static Code Analysis Result</label>
    <nameField>
        <displayFormat>SCA-{00000}</displayFormat>
        <label>Static Code Analysis Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>